--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
+    "redis": "^2.8.0",
     "rxjs": "^5.5.6"
   },
   "scripts": {
