--- a/package.json
+++ b/package.json
@@ -50,7 +50,14 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "2.0.3",
+    "d3-dsv": "^1.0.8",
+    "d3-format": "^1.2.1",
+    "d3-scale": "^1.0.7",
+    "d3-time-format": "^2.1.1",
+    "prop-types": "^15.6.0",
+    "react-bootstrap": "^0.31.5",
+    "react-stockcharts": "^0.7.0-beta.25"
   },
   "scripts": {
     "start": "node scripts/start.js & node server.js",
