--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
+    "d3-dsv": "^1.0.8",
+    "d3-format": "^1.2.1",
+    "d3-scale": "^1.0.7",
+    "d3-time-format": "^2.1.1",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
@@ -37,10 +41,14 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "prop-types": "^15.6.0",
     "raf": "3.4.0",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.31.5",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
+    "react-stockcharts": "^0.7.0-beta.25",
+    "react-toggle": "^4.0.2",
     "redis": "^2.8.0",
     "rxjs": "^5.5.6",
     "sass-loader": "^6.0.6",
@@ -50,14 +58,7 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3",
-    "d3-dsv": "^1.0.8",
-    "d3-format": "^1.2.1",
-    "d3-scale": "^1.0.7",
-    "d3-time-format": "^2.1.1",
-    "prop-types": "^15.6.0",
-    "react-bootstrap": "^0.31.5",
-    "react-stockcharts": "^0.7.0-beta.25"
+    "whatwg-fetch": "2.0.3"
   },
   "scripts": {
     "start": "node scripts/start.js & node server.js",
